--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -8,8 +8,7 @@
       "flex-layout.row#home-section04",
       "flex-layout.row#home-section05",
       "flex-layout.row#home-section06",
-      "flex-layout.row#home-section07",
-      "flex-layout.row#upperFooterDesktop"
+      "flex-layout.row#home-section07"
     ]
   },
 
